src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__settings_budget_parity__budget_tab_renders_120x40.snap
---
source: src/tui/snapshot_tests/settings_budget_parity.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 40 },
    content: [
        "per_session_usd: < 5.5 >                                                                                                ",
        "total_usd: < 12.5 >                                                                                                     ",
        "alert_threshold_pct: < 80 >                                                                                             ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Black, bg: Cyan, underline: Reset, modifier: BOLD | REVERSED,
        x: 24, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
